src/test/ui/macros/macro-backtrace-invalid-internals.stderr
error: no method named `fake` found for type `{integer}` in the current scope
  --> $DIR/macro-backtrace-invalid-internals.rs:15:13
   |
15 |           1.fake()
   |             ^^^^
...
50 |     fake_method_stmt!();
   |     -------------------- in this macro invocation

error: attempted access of field `fake` on type `{integer}`, but no field with that name was found
  --> $DIR/macro-backtrace-invalid-internals.rs:21:11
   |
21 |           1.fake
   |           ^^^^^^
...
51 |     fake_field_stmt!();
   |     ------------------- in this macro invocation

error: attempted tuple index `0` on type `{integer}`, but the type was not a tuple or tuple struct
  --> $DIR/macro-backtrace-invalid-internals.rs:27:11
   |
27 |           (1).0
   |           ^^^^^
...
52 |     fake_anon_field_stmt!();
   |     ------------------------ in this macro invocation

error: no method named `fake` found for type `{integer}` in the current scope
  --> $DIR/macro-backtrace-invalid-internals.rs:33:13
   |
33 |           1.fake()
   |             ^^^^
...
54 |     let _ = fake_method_expr!();
   |             ------------------- in this macro invocation

error: attempted access of field `fake` on type `{integer}`, but no field with that name was found
  --> $DIR/macro-backtrace-invalid-internals.rs:39:11
   |
39 |           1.fake
   |           ^^^^^^
...
55 |     let _ = fake_field_expr!();
   |             ------------------ in this macro invocation

error: attempted tuple index `0` on type `{integer}`, but the type was not a tuple or tuple struct
  --> $DIR/macro-backtrace-invalid-internals.rs:45:11
   |
45 |           (1).0
   |           ^^^^^
...
56 |     let _ = fake_anon_field_expr!();
   |             ----------------------- in this macro invocation

error: aborting due to 6 previous errors

